# chronos

./: .antigravityrules  .geminiignore  .gitignore  .release-please-manifest.json  Cargo.toml  LICENSE  README.md  SECURITY.md  codecov.yml  deny.toml  justfile  release-please-config.json
.agents/rules/: 00-global-language.md  01-rust-pragmatic.md  02-chronos-architecture.md  03-os-integration.md  04-didactic-mode.md  05-iterative-dev.md  06-clean-boundaries.md  07-workspace-routing.md  08-conventional-commits.md  09-phase-workflow.md  09-step-workflow.md  10-detailed-task-docs.md  11-provisional-decisions.md
.agents/workflows/: 01-rust-tdd-loop.md  02-sqlx-pipeline.md  04-didactic-deep-dive.md  05-audit_dependencies.md  06-verify_workspace.md  07-create-tasks.doc  07-create-tasks.md  08-approve-task.md  09-start-step.md  approve-task.md  audit_dependencies.md  create-tasks.md  fix-coverage.md  os-async-boundary.md  verify_workspace.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/chronos-capture/: CHANGELOG.md  Cargo.toml  README.md
crates/chronos-capture/src/: lib.rs  ring_buffer.rs  x11.rs
crates/chronos-core/: CHANGELOG.md  Cargo.toml  README.md
crates/chronos-core/src/: error.rs  lib.rs  models.rs  traits.rs
crates/chronos-daemon/: CHANGELOG.md  Cargo.toml  README.md
crates/chronos-daemon/src/: cli.rs  database.rs  handlers.rs  lib.rs  main.rs  pipeline.rs
crates/chronos-inference/: CHANGELOG.md  Cargo.toml  README.md
crates/chronos-inference/src/: lib.rs  ollama.rs
docs/design/: 0001-chronos-personal-context-engine.md
docs/idea/: 0001.md  0002.md  0003.md
docs/learning/: 0001-v0.1-deep-dive.md
docs/prompt/: 0001-milestone-01-mvp.md  0001-phase-01-mvp.md
docs/reference/: 0001-skills-index.md
docs/roadmap/: 0001-milestone-01-mvp-roadmap.md  0001-phase-01-mvp-roadmap.md
docs/roadmap/tasks-step-1-workspace-skeleton/: 01-workspace-root.md  02-crate-stubs.md  03-verification.md
docs/roadmap/tasks-step-2-core-domain-models/: 01-error-enum.md  02-frame-struct.md  03-semantic-log-struct.md  04-config-structs.md  05-module-exports-and-verification.md
docs/roadmap/tasks-step-3-trait-boundaries-mocks/: 01-trait-abstractions.md  02-mock-implementations.md  03-module-exports.md
docs/roadmap/tasks-step-4-database-layer/: 01-sql-migrations.md  02-database-struct-and-conn.md  03-crud-operations.md  04-integration-tests.md
docs/roadmap/tasks-step-5-screen-capture/: 01-ring-buffer.md  02-x11-capture.md  03-module-exports.md
docs/roadmap/tasks-step-6-ollama-vision-client/: 01-ollama-client-struct.md  02-parse-vlm-response.md  03-vision-trait-impl.md  04-export-and-verify.md
docs/roadmap/tasks-step-7-pipeline-integration/: 01-capture-engine-struct.md  02-process-frame.md  03-run-pipeline.md
docs/roadmap/tasks-step-8-cli-query-interface/: 01-cli-parser.md  02-query-status-handlers.md  03-main-integration.md
docs/roadmap/tasks-step-9-integration-smoke-test/: 01-end-to-end-integration-test.md  02-readme-documentation.md  03-release-verification.md
migrations/: 001_create_semantic_logs.sql
