[package]
name = "chronos-capture"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chronos-core = { path = "../chronos-core" }
xcap = "0.9.2"
tokio = { version = "1.50.0", features = ["rt", "sync"] }
image = "0.25.10"
async-trait = "0.1.89"
chrono = "0.4.44"
ulid = "1.2.1"
tracing = "0.1.44"
