[package]
name = "chronos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
ulid = { version = "1.2.1", features = ["serde"] }
async-trait = "0.1"
