[package]
name = "chronos-daemon"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chronos-core = { path = "../chronos-core" }
chronos-capture = { path = "../chronos-capture" }
chronos-inference = { path = "../chronos-inference" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
clap = { version = "4", features = ["derive"] }
