[package]
name = "chronos-daemon"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chronos-core = { path = "../chronos-core" }
chronos-capture = { path = "../chronos-capture" }
chronos-inference = { path = "../chronos-inference" }
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
async-trait = "0.1.89"
clap = { version = "4.6.0", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
ulid = "1.2.1"
tracing = "0.1.44"
anyhow = "1.0.102"
dirs = "6.0.0"
tracing-subscriber = "0.3.23"

[dev-dependencies]
chronos-core = { path = "../chronos-core", features = ["mocks"] }
tokio = { version = "1.50.0", features = ["test-util"] }
tracing-test = "0.2.6"
