[package]
name = "chronos-inference"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chronos-core = { path = "../chronos-core" }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde_json = "1.0.149"
base64 = "0.22.1"
tokio = { version = "1.50.0", features = ["full"] }
